--- a/book/velocities.ipynb
+++ b/book/velocities.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML('<img src=\"assets/Harmonic1.gif\">')  # retrieved from http://mathforum.org/mathimages/imgUpload/SolveHarmonic.gif"
+    "HTML('<img src=\"./Harmonic1.gif\">')  # retrieved from http://mathforum.org/mathimages/imgUpload/SolveHarmonic.gif"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML('<img src=\"assets/Harmonic2.gif\">')  # retrieved from https://www.maplesoft.com/view.aspx?SI=3926/forced_oscillations65.gif"
+    "HTML('<img src=\"./Harmonic2.gif\">')  # retrieved from https://www.maplesoft.com/view.aspx?SI=3926/forced_oscillations65.gif"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML('<img src=\"assets/forcedoscillator.gif\">')  # retrieved from http://www.acs.psu.edu/drussell/Demos/SHO/forced.gif"
+    "HTML('<img src=\"./forcedoscillator.gif\">')  # retrieved from http://www.acs.psu.edu/drussell/Demos/SHO/forced.gif"
    ]
   },
   {
