--- a/_sources/nouns-starting-with-ben.ipynb
+++ b/_sources/nouns-starting-with-ben.ipynb
@@ -51,7 +51,8 @@
    "outputs": [],
    "source": [
     "# get words that start with ben\n",
-    "benwords = [i for i in words.words() if i[0:3]=='ben']\n",
+    "myname = 'ben'\n",
+    "benwords = [i for i in words.words() if i[0:len(myname)]==myname]\n",
     "# function to test if something is a noun\n",
     "is_noun = lambda pos: pos[:2] == 'NN'\n",
     "# do the nlp stuff\n",
