revise elem1 of book

--- a/book/intro.ipynb
+++ b/book/intro.ipynb
@@ -5,7 +5,7 @@
    "id": "wrapped-scholarship",
    "metadata": {},
    "source": [
-    "# Chapter 3\n",
+    "# Intro\n",
     "\n",
     "Jumping into Jupyter Notebooks.  First, with Python."
    ]
